# CV-Flask

./: .dockerignore  .env  .env.example  .gitignore  .replit  Dockerfile  docker-compose.yml  main.py  manage.py  multilingual-cv-json.json  next.config.ts  package-lock.json  package.json  padel_scout.py  pnpm-lock.yaml  prod-docker-compose.yml  pyproject.toml  readme.md  replit_zip_error_log.txt  req.txt  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.cache/nix/: binary-cache-v6.sqlite
.upm/: store.json
.viewer-tmp/: 06-deploy-wizard.md  07-ui-refinements.md  Base.astro  COMMITS.md  Dashboard.jsx  Dockerfile-back  backend-package.json  commit_msg.txt  deploy.test.js  docker-compose.yml  fix_modal.py  patch_prune.py  patch_stop.py  patch_stop_btn.py  patch_stop_per_container.py  patch_stopped.py  server.js  v021.test.js
__old/: main.py  padel_scout.py
__old/static_css/: background.css  btnAviso.css  modern.css  mouse.css
__old/static_js/: _background.js  app.js  (+5 more)
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
config/: asgi.py  urls.py  wsgi.py
legacy-src/: padel_cli.py  render_templates.py
public/: manifest.webmanifest
scripts/: REDES_EXAMENES_CLASE.md  append-estadistica-ud1-ud3.js  build_sdig_questions.py  extract_sdig_simulacro.py  generate_redes_data.py  parse_redesnuevohoy.py  redes_examenes_clase.json  test_parse_redesnuevohoy.py
specs/: README.md  architecture.md  quiz-repaso-mode.md
templates/: ECSO.html  SSOOAvanzados.html  errores.html  index.html  login.html  resumen.html
(+426 files in other folders)
